# versions

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: check.yml  docs.yml  release.yml  test.yml
changelog/: index.html
changes/: 1.change.md  3.feature.md
code_of_conduct/: index.html
contributing/: index.html
docs/: reference.md
docs/reference/: converters.md  errors.md  functions.md  meta.md  operators.md  segments.md  specification.md  specifiers.md  types.md  version.md  version_sets.md  versioned.md
reference/: index.html
reference/converters/: index.html
reference/errors/: index.html
reference/functions/: index.html
reference/meta/: index.html
reference/operators/: index.html
reference/segments/: index.html
reference/specification/: index.html
reference/specifiers/: index.html
reference/types/: index.html
reference/version/: index.html
reference/version_sets/: index.html
reference/versioned/: index.html
search/: search_index.json
security/: index.html
tests/: test_comparison.py  test_converters.py  test_infinity.py  test_parse_specifier.py  test_parse_version.py  test_parse_version_set.py  test_segments.py  test_simplify.py  test_specifiers.py  test_types.py  test_version.py  test_versioned.py
usage/: index.html
versions/: __init__.py  __main__.py  constants.py  converters.py  converters_modern.py  converters_normal.py  converters_utils.py  errors.py  functions.py  main.py  meta.py  operators.py  parsers.py  patterns.py  phases.py  representation.py  segments.py  specification.py  specifiers.py  string.py  types.py  typing.py  utils.py  version.py  version_sets.py  versioned.py
versions/segments/: __init__.py  constants.py  epoch.py  local.py  release.py  tags.py  typing.py
