[tool.poetry]
name = "versions"
version = "1.6.1"
description = "Parsing, inspecting and specifying versions."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/versions"
repository = "https://github.com/nekitdev/versions"
documentation = "https://nekitdev.github.io/versions"

keywords = ["python", "semver", "version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Funding = "https://patreon.com/nekitdev"
Issues = "https://github.com/nekitdev/versions/issues"

[[tool.poetry.packages]]
include = "versions"

[tool.poetry.dependencies]
python = ">= 3.7"

attrs = ">= 23.1.0"

typing-aliases = ">= 1.1.2"
typing-extensions = ">= 4.5.0"

click = ">= 8.1.3"

orderings = ">= 1.1.0"
solus = ">= 1.1.0"
entrypoint = ">= 1.4.0"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.3.0"

[tool.poetry.group.format.dependencies.isort]
version = "5.12.0"
python = ">= 3.8"

[tool.poetry.group.format.dependencies.flake8]
version = "6.0.0"
python = ">= 3.8.1"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "1.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
pytest-cov = "4.0.0"

hypothesis = "6.75.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.3"
mkdocs-material = "9.1.14"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.21.2"
extras = ["python"]

[tool.poetry.group.dev.dependencies]
changelogging = "1.3.0"

[tool.black]
line_length = 100

[tool.flake8]
max_line_length = 100
ignore = [
    "E402",  # module level import not at top of file (circular import fixes)
]

[tool.isort]
line_length = 100
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov versions"
testpaths = ["tests"]

[tool.coverage.run]
source = ["versions"]
omit = ["versions/main.py", "versions/__main__.py"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "raise InternalError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[tool.changelogging]
name = "versions"
version = "1.6.1"
url = "https://github.com/nekitdev/versions"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.5.2"]
build-backend = "poetry.core.masonry.api"
