[tool.poetry]
name = "versions"
version = "2.1.0"
description = "Parsing, inspecting and specifying versions."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/versions"
repository = "https://github.com/nekitdev/versions"
documentation = "https://nekitdev.github.io/versions"

keywords = ["python", "semver", "version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Issues = "https://github.com/nekitdev/versions/issues"

[[tool.poetry.packages]]
include = "versions"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = "^23.2.0"

typing-aliases = "^1.4.1"
typing-extensions = "^4.9.0"

click = "^8.1.7"

funcs = "^0.8.0"
iters = "^0.15.0"

orderings = "^1.1.0"
solus = "^1.1.0"
entrypoint = "^2.0.0"

[tool.poetry.group.format.dependencies]
ruff = "0.1.11"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.test.dependencies]
coverage = "7.4.0"
pytest = "7.4.4"
pytest-cov = "4.1.0"

hypothesis = "6.92.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.3"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402",  # module level import not at top of file
]

[tool.pytest.ini_options]
addopts = "--cov versions"
testpaths = ["tests"]

[tool.coverage.run]
source = ["versions"]
omit = [
    # not testing main
    "versions/main.py",
    "versions/__main__.py",
]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "raise InternalError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "versions"
version = "2.1.0"
url = "https://github.com/nekitdev/versions"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.8.1"]
build-backend = "poetry.core.masonry.api"
